--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+openai = "^0.27.8"
+backoff = "^2.2.1"
+chromadb = "^0.4.5"
 
 [tool.poetry.dev-dependencies]
 
